logs/aws-ops.log
Listing '.'...
Listing './bin'...
Compiling './bin/cloudcaster.py'...
***   File "./bin/cloudcaster.py", line 35
    print 'boto required'
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/ec2autoimage.py'...
***   File "./bin/ec2autoimage.py", line 69
    print "require [-n name] or [-s service] or [-a ami]"
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/ec2cleanami.py'...
***   File "./bin/ec2cleanami.py", line 96
    print "DRY RUN - NOT EXECUTING CLEANUP"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/ec2cleanlc.py'...
***   File "./bin/ec2cleanlc.py", line 101
    print "DRY RUN - NOT EXECUTING CLEANUP"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/ec2createapp.py'...
***   File "./bin/ec2createapp.py", line 164
    print "no autoscale block, I shouldn't be doing this!"
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/ec2nodefind.py'...
***   File "./bin/ec2nodefind.py", line 97
    print "Autodiscovery: env %s" % t.value
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/ec2rotatehosts.py'...
***   File "./bin/ec2rotatehosts.py", line 78
    print "%s rotating autoscale group in %s with count %i" % (args.group, args.region, args.count)
                                                          ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/aws_ops-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/boto'...
Listing './lib/python3.5/site-packages/boto/awslambda'...
Listing './lib/python3.5/site-packages/boto/beanstalk'...
Listing './lib/python3.5/site-packages/boto/cacerts'...
Listing './lib/python3.5/site-packages/boto/cloudformation'...
Listing './lib/python3.5/site-packages/boto/cloudfront'...
Listing './lib/python3.5/site-packages/boto/cloudhsm'...
Listing './lib/python3.5/site-packages/boto/cloudsearch'...
Listing './lib/python3.5/site-packages/boto/cloudsearch2'...
Listing './lib/python3.5/site-packages/boto/cloudsearchdomain'...
Listing './lib/python3.5/site-packages/boto/cloudtrail'...
Listing './lib/python3.5/site-packages/boto/codedeploy'...
Listing './lib/python3.5/site-packages/boto/cognito'...
Listing './lib/python3.5/site-packages/boto/cognito/identity'...
Listing './lib/python3.5/site-packages/boto/cognito/sync'...
Listing './lib/python3.5/site-packages/boto/configservice'...
Listing './lib/python3.5/site-packages/boto/contrib'...
Listing './lib/python3.5/site-packages/boto/datapipeline'...
Listing './lib/python3.5/site-packages/boto/directconnect'...
Listing './lib/python3.5/site-packages/boto/dynamodb'...
Listing './lib/python3.5/site-packages/boto/dynamodb2'...
Listing './lib/python3.5/site-packages/boto/ec2'...
Listing './lib/python3.5/site-packages/boto/ec2/autoscale'...
Listing './lib/python3.5/site-packages/boto/ec2/cloudwatch'...
Listing './lib/python3.5/site-packages/boto/ec2/elb'...
Listing './lib/python3.5/site-packages/boto/ec2containerservice'...
Listing './lib/python3.5/site-packages/boto/ecs'...
Listing './lib/python3.5/site-packages/boto/elasticache'...
Listing './lib/python3.5/site-packages/boto/elastictranscoder'...
Listing './lib/python3.5/site-packages/boto/emr'...
Listing './lib/python3.5/site-packages/boto/file'...
Listing './lib/python3.5/site-packages/boto/fps'...
Listing './lib/python3.5/site-packages/boto/glacier'...
Listing './lib/python3.5/site-packages/boto/gs'...
Listing './lib/python3.5/site-packages/boto/iam'...
Listing './lib/python3.5/site-packages/boto/kinesis'...
Listing './lib/python3.5/site-packages/boto/kms'...
Listing './lib/python3.5/site-packages/boto/logs'...
Listing './lib/python3.5/site-packages/boto/machinelearning'...
Listing './lib/python3.5/site-packages/boto/manage'...
Listing './lib/python3.5/site-packages/boto/mashups'...
Listing './lib/python3.5/site-packages/boto/mturk'...
Listing './lib/python3.5/site-packages/boto/mws'...
Listing './lib/python3.5/site-packages/boto/opsworks'...
Listing './lib/python3.5/site-packages/boto/pyami'...
Listing './lib/python3.5/site-packages/boto/pyami/installers'...
Listing './lib/python3.5/site-packages/boto/pyami/installers/ubuntu'...
Listing './lib/python3.5/site-packages/boto/rds'...
Listing './lib/python3.5/site-packages/boto/rds2'...
Listing './lib/python3.5/site-packages/boto/redshift'...
Listing './lib/python3.5/site-packages/boto/roboto'...
Listing './lib/python3.5/site-packages/boto/route53'...
Listing './lib/python3.5/site-packages/boto/route53/domains'...
Listing './lib/python3.5/site-packages/boto/s3'...
Listing './lib/python3.5/site-packages/boto/sdb'...
Listing './lib/python3.5/site-packages/boto/sdb/db'...
Listing './lib/python3.5/site-packages/boto/sdb/db/manager'...
Listing './lib/python3.5/site-packages/boto/services'...
Listing './lib/python3.5/site-packages/boto/ses'...
Listing './lib/python3.5/site-packages/boto/sns'...
Listing './lib/python3.5/site-packages/boto/sqs'...
Listing './lib/python3.5/site-packages/boto/sts'...
Listing './lib/python3.5/site-packages/boto/support'...
Listing './lib/python3.5/site-packages/boto/swf'...
Listing './lib/python3.5/site-packages/boto/vendored'...
Listing './lib/python3.5/site-packages/boto/vendored/regions'...
Listing './lib/python3.5/site-packages/boto/vpc'...
Listing './lib/python3.5/site-packages/boto-2.48.0.dist-info'...
Listing './lib/python3.5/site-packages/cloudcaster'...
Compiling './lib/python3.5/site-packages/cloudcaster/cloudcaster.py'...
***   File "./lib/python3.5/site-packages/cloudcaster/cloudcaster.py", line 35
    print 'boto required'
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cloudcaster/json2yaml.py'...
***   File "./lib/python3.5/site-packages/cloudcaster/json2yaml.py", line 22
    print yaml.safe_dump(conf)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ec2autoimage'...
Compiling './lib/python3.5/site-packages/ec2autoimage/ec2autoimage.py'...
***   File "./lib/python3.5/site-packages/ec2autoimage/ec2autoimage.py", line 69
    print "require [-n name] or [-s service] or [-a ami]"
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ec2cleanami'...
Compiling './lib/python3.5/site-packages/ec2cleanami/ec2cleanami.py'...
***   File "./lib/python3.5/site-packages/ec2cleanami/ec2cleanami.py", line 96
    print "DRY RUN - NOT EXECUTING CLEANUP"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ec2cleanlc'...
Compiling './lib/python3.5/site-packages/ec2cleanlc/ec2cleanlc.py'...
***   File "./lib/python3.5/site-packages/ec2cleanlc/ec2cleanlc.py", line 101
    print "DRY RUN - NOT EXECUTING CLEANUP"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ec2createapp'...
Compiling './lib/python3.5/site-packages/ec2createapp/ec2createapp.py'...
***   File "./lib/python3.5/site-packages/ec2createapp/ec2createapp.py", line 164
    print "no autoscale block, I shouldn't be doing this!"
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ec2nodefind'...
Compiling './lib/python3.5/site-packages/ec2nodefind/ec2nodefind.py'...
***   File "./lib/python3.5/site-packages/ec2nodefind/ec2nodefind.py", line 97
    print "Autodiscovery: env %s" % t.value
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ec2rotatehosts'...
Compiling './lib/python3.5/site-packages/ec2rotatehosts/ec2rotatehosts.py'...
***   File "./lib/python3.5/site-packages/ec2rotatehosts/ec2rotatehosts.py", line 78
    print "%s rotating autoscale group in %s with count %i" % (args.group, args.region, args.count)
                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
